kdegames (4:4.7.1-0r0) UNRELEASED; urgency=low

  [ Daniele E. Domenichelli ]
  * New upstream release.
  * Update build dependencies:
    - Bump kde-sc-dev-latest to >= 4:4.7.1.
    - Bump kdelibs5-dev to >= 4:4.7.
    - Added libopenal-dev (required by KGoldrunner and Granatier).
    - Added libsndfile1-dev (required by KGoldrunner).
  * Update installed files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 23 Sep 2011 20:30:23 +0100

kdegames (4:4.6.5-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.
  * Update symbols files.
  * Update lintian overrides.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:53:56 +0300

kdegames (4:4.6.3-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Confirm symbol files on more debian arches.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.
  * Bump Standards-Version to 3.9.2; no changes needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:34 +0300

kdegames (4:4.6.2-1) experimental; urgency=low

  * New upstream release
  * Update installed files.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Switch debian/rules engine to dhmk based qt-kde-team/2/*.
  * Add ${misc:Depends} to Depends of packages where it was missing.
  * Move kdegames-dbg package to the bottom of the debian/control.
  * Add ${perl:Depends} to katomic and klickety Depends.
  * Do not install upstream changelog if its size is 0 (affects kgoldrunner).
  * Override some ldconfig lintian errors in kpat.
  * Provide a transitional ksame package for klickety.
  * Replace/Break previous versions of ksame in klickety.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.2.
  * Bump kdelibs5-dev build dependency to >= 4:4.6.