@@ -1,3 +1,4 @@
+/usr/share/icons/hicolor/16x16/apps/kajongg.png	kajongg-16.xpm
 /usr/share/icons/hicolor/16x16/apps/katomic.png	katomic-16.xpm
 /usr/share/icons/hicolor/16x16/apps/kbattleship.png	kbattleship-16.xpm
 /usr/share/icons/hicolor/16x16/apps/kblackbox.png	kblackbox-16.xpm
@@ -20,6 +21,7 @@
 /usr/share/icons/hicolor/16x16/apps/ksudoku.png   ksudoku-16.xpm
 /usr/share/icons/hicolor/16x16/apps/ktuberling.png	ktuberling-16.xpm
 /usr/share/icons/hicolor/16x16/apps/lskat.png	lskat-16.xpm
+/usr/share/icons/hicolor/32x32/apps/kajongg.png	kajongg.xpm
 /usr/share/icons/hicolor/32x32/apps/katomic.png	katomic.xpm
 /usr/share/icons/hicolor/32x32/apps/kbattleship.png	kbattleship.xpm
 /usr/share/icons/hicolor/32x32/apps/kblackbox.png	kblackbox.xpm
