@@ -1,0 +1,147 @@
+/* XPM */
+static char *kajongg_16[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 125 2 ",
+"   c black",
+".  c #222222",
+"X  c gray20",
+"o  c #363635",
+"O  c #3B3B39",
+"+  c #3E3E3A",
+"@  c #3E3E3D",
+"#  c #40403B",
+"$  c #464640",
+"%  c #474740",
+"&  c gray28",
+"*  c #4D4D44",
+"=  c #494949",
+"-  c #4C4C4C",
+";  c #525247",
+":  c #535349",
+">  c #55554A",
+",  c #57574B",
+"<  c #58584F",
+"1  c #5C5C4E",
+"2  c #606051",
+"3  c #636353",
+"4  c #656554",
+"5  c #666655",
+"6  c #676756",
+"7  c #6B6B58",
+"8  c #697E5E",
+"9  c #72725D",
+"0  c #74745E",
+"q  c #75755F",
+"w  c #787860",
+"e  c #797962",
+"r  c #7A7A62",
+"t  c #7C7C64",
+"y  c #7D7D64",
+"u  c #7E7E78",
+"i  c #2F804B",
+"p  c #4D915B",
+"a  c #53955E",
+"s  c #589860",
+"d  c #5E9B64",
+"f  c #738263",
+"g  c #679364",
+"h  c #6E9066",
+"j  c #649E63",
+"k  c #66A068",
+"l  c #6EA46C",
+"z  c #7AAA72",
+"x  c #7DAD74",
+"c  c #B0801A",
+"v  c #E5A41F",
+"b  c #E9A31C",
+"n  c #E8A71F",
+"m  c #AD9B48",
+"M  c #B99C56",
+"N  c #B8955E",
+"B  c #828268",
+"V  c #86866A",
+"C  c #8B876B",
+"Z  c #919171",
+"A  c #939372",
+"S  c #959574",
+"D  c #969675",
+"F  c #9A9A77",
+"G  c #97977E",
+"H  c #9C9C79",
+"J  c #A19C7A",
+"K  c #BDBC68",
+"L  c #A3A37D",
+"P  c #D1AF5D",
+"I  c #D7BE7B",
+"U  c #C2C169",
+"Y  c #E9C263",
+"T  c #EAC362",
+"R  c #E9CB66",
+"E  c #868680",
+"W  c #9C9C8F",
+"Q  c #A8A881",
+"!  c #ABAB81",
+"~  c #ACAC83",
+"^  c #AEAE84",
+"/  c #BBBB81",
+"(  c #B8B389",
+")  c #BAB48A",
+"_  c #BABA8D",
+"`  c #ACC786",
+"'  c #A6C489",
+"]  c #ABC089",
+"[  c #B6C38E",
+"{  c #BCC992",
+"}  c #BFD296",
+"|  c #D0CF82",
+" . c #CEDA84",
+".. c #D4D38B",
+"X. c #C0C090",
+"o. c #C7C795",
+"O. c #C0CD95",
+"+. c #D1CA98",
+"@. c #CFDB97",
+"#. c #D3D395",
+"$. c #D5D59E",
+"%. c #E7E68E",
+"&. c #EAE98F",
+"*. c #EBE394",
+"=. c #EBEA90",
+"-. c #DFDFB4",
+";. c #D2D2BF",
+":. c #E4DCA4",
+">. c #E4E4A0",
+",. c #E1E1A7",
+"<. c #EBE3A3",
+"1. c #EBEBA4",
+"2. c #E7E7AB",
+"3. c #EBE3A9",
+"4. c #E6E8AB",
+"5. c #E8E9AC",
+"6. c #EBEBAD",
+"7. c #ECECB1",
+"8. c #ECECBE",
+"9. c #F3F2BF",
+"0. c #F2F2D0",
+"q. c #F5F5E6",
+"w. c #F6F6E7",
+"e. c #F8F8E0",
+"r. c None",
+/* pixels */
+"r.r.9.e.e.e.e.e.e.e.;.W / r.r.r.",
+"r.r.0.w.w.w.w.w.w.E @ u ! K r.r.",
+"r.r.7.8.8.8.8.-.G o < O ..U - r.",
+"r.r.1.6.6.6.,.B 2 5 5 : %.U = r.",
+"r.r.@.6.6.6.S > 6 # t t | U & r.",
+"r.r.j } 6.6.; + 1 t # F =.U & r.",
+"r.r.` a x [ X + t X > 6.=.U & r.",
+"r.r.1.l p g $ 0 0 * o.'  .U & r.",
+"r.r.I { z h 0 0 0 O.s d &.U & r.",
+"r.r.N F L V 5 7 ] i k 4.=.U & r.",
+"r.r.#.A $.X.^ ^ f 8 4.6.=.U & r.",
+"r.r.>.A 3 S _ ! ^ t 6.6.=.U & r.",
+"r.r.<.3.:.( ) J C +.3.3.*.U & r.",
+"r.r.Y Y Y Y M P Y Y Y Y R U & r.",
+"r.r.c v n n n n n n n n b m & r.",
+"r.r.r.r.                    . r."
+};
