@@ -1,0 +1,187 @@
+/* XPM */
+static char *kajongg[] = {
+/* columns rows colors chars-per-pixel */
+"32 32 149 2 ",
+"   c #000000",
+".  c gray5",
+"X  c #333333",
+"o  c #383837",
+"O  c #3D3D3A",
+"+  c #244935",
+"@  c #026734",
+"#  c #056935",
+"$  c #096B38",
+"%  c #16723E",
+"&  c #42423D",
+"*  c #5C563E",
+"=  c #1C7641",
+"-  c #3C6045",
+";  c #257B46",
+":  c #287D47",
+">  c #297D48",
+",  c #307F4B",
+"<  c #444440",
+"1  c #4B4B43",
+"2  c #4B4B4B",
+"3  c #525247",
+"4  c #55554A",
+"5  c #56584B",
+"6  c #5A5A4D",
+"7  c #5E5E50",
+"8  c #5D5D5D",
+"9  c #476C4D",
+"0  c #516D50",
+"q  c #567655",
+"w  c #756B4D",
+"e  c #666555",
+"r  c #62625C",
+"t  c #6D6D59",
+"y  c #6C7C5E",
+"u  c #72715D",
+"i  c #79745C",
+"p  c #6F6F68",
+"a  c #727267",
+"s  c #7A7A62",
+"d  c #9F400A",
+"f  c #A0400C",
+"g  c #957B56",
+"h  c #2E804B",
+"j  c #30814C",
+"k  c #3A8751",
+"l  c #3E8953",
+"z  c #418B55",
+"x  c #518859",
+"c  c #4D925B",
+"v  c #54965E",
+"b  c #599961",
+"n  c #6EA46C",
+"m  c #76A867",
+"M  c #71A66D",
+"N  c #7BAC73",
+"B  c #D99818",
+"V  c #E8A21A",
+"C  c #C4872B",
+"Z  c #D9A022",
+"A  c #E0A523",
+"S  c #E8AA24",
+"D  c #E8AD28",
+"F  c #9D8D5D",
+"G  c #818167",
+"H  c #8B8467",
+"J  c #85846A",
+"K  c #8B8B6D",
+"L  c #968E6D",
+"P  c #989765",
+"I  c #9C9C65",
+"U  c #8C8C74",
+"Y  c #838379",
+"T  c #959574",
+"R  c #9A9A77",
+"E  c #9D9D79",
+"W  c #A89F78",
+"Q  c #85B178",
+"!  c #8AB47A",
+"~  c #90B87E",
+"^  c #BEA96B",
+"/  c #A2A27D",
+"(  c #ADA47B",
+")  c #BDAA78",
+"_  c #D5A844",
+"`  c #E8B646",
+"'  c #E9B946",
+"]  c #D1B972",
+"[  c #A3C17C",
+"{  c #E8CE4E",
+"}  c #E9CB51",
+"|  c #CDCC7C",
+" . c #DCC277",
+".. c #EAD96B",
+"X. c #E9CD76",
+"o. c #E7CB7B",
+"O. c #E9CD7C",
+"+. c #E7E66E",
+"@. c #E9E86E",
+"#. c #EAE972",
+"$. c #EAE47A",
+"%. c #EBEA7B",
+"&. c #8E8E8E",
+"*. c #92928E",
+"=. c #95BA81",
+"-. c #A4A384",
+";. c #ACAC83",
+":. c #B0B086",
+">. c #B3B388",
+",. c #BBBB8E",
+"<. c #B7B791",
+"1. c #B9B992",
+"2. c #9EC085",
+"3. c #A5C388",
+"4. c #DFD58B",
+"5. c #C4C493",
+"6. c #C3C995",
+"7. c #C9C996",
+"8. c #CECE9A",
+"9. c #D5C993",
+"0. c #C7D79B",
+"q. c #DFD093",
+"w. c #D3D39D",
+"e. c #D0DC9F",
+"r. c #EADC94",
+"t. c #E3D59B",
+"y. c #EADC9F",
+"u. c #E3E296",
+"i. c #EBEA9B",
+"p. c #D6D5A3",
+"a. c #D4DEA1",
+"s. c #DCDCA3",
+"d. c #DCE3A5",
+"f. c #E1E1A6",
+"g. c #EBE6A2",
+"h. c #E5E5AA",
+"j. c #E7E9AB",
+"k. c #EBEBAD",
+"l. c #F0F0AE",
+"z. c #EBE7B0",
+"x. c #ECECB6",
+"c. c #F1F1BA",
+"v. c #EEEEC7",
+"b. c #EDEDD7",
+"n. c #F3F3DC",
+"m. c #E1E1E1",
+"M. c #FAFAF2",
+"N. c gray100",
+"B. c None",
+/* pixels */
+"B.B.B.B.%.l.l.l.l.l.l.l.l.l.l.l.l.l.l.l.k.l.l.f.| #.B.B.B.B.B.B.",
+"B.B.B.B.c.N.N.N.N.N.N.N.N.N.N.N.N.N.N.N.m.&.2 X 1 #.B.B.B.B.B.B.",
+"B.B.B.B.c.M.M.M.M.M.M.M.M.M.M.M.M.M.M.*.o X 2 o 8 #.@.B.B.B.B.B.",
+"B.B.B.B.k.n.n.n.n.n.n.n.n.n.n.n.n.b.p X X 8 b.Y a #.@.P B.B.B.B.",
+"B.B.B.B.k.v.v.v.v.v.v.v.v.v.v.v.v.U X X X o < O -.#.@.I 8 B.B.B.",
+"B.B.B.B.i.x.x.x.x.x.x.x.x.x.h.1.<.X X O -.6 X X p.#.@.I 8 B.B.B.",
+"B.B.B.B.i.k.k.k.k.k.k.k.k.k.s ,.< O 1 3 T u X 3 k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.k.k.k.k.k.k.k.k.5.4 s X 7.w.X 1 o X T f.#.@.I 8 B.B.B.",
+"B.B.B.B.i.k.k.k.k.k.k.k.l.e u X X o & 4 j.U o 5.J #.@.I 8 B.B.B.",
+"B.B.B.B.m j.k.k.k.k.k.k.w.X & i s.& X & & & s e s.#.@.I 8 B.B.B.",
+"B.B.B.B.v c k.k.k.k.k.k.T X X 5 t & t h.e & 6 ;.k.#.#.I 8 B.B.B.",
+"B.B.B.B.[ k c d.k.k.k.k.4 X X X e 6 & 1 & o u k.k.#.+.I 8 B.B.B.",
+"B.B.B.B.i.z Q ; ~ h.k.w.X X X O 5.( X X X & s.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.2.~ v N % N T X X 5 o X & X X X :.k.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.k.v N Q : ~ q X e j.G 7 j.G X u l.k.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.k.0.: k v j y O X o o o 3 & O p.j.! l N #.#.I 8 B.B.B.",
+"B.B.B.B.i.k.k.M h ; $ 0 ;.u T s i 6 ,.w.3.h @ k h.#.@.I 8 B.B.B.",
+"B.B.B.C d q.8.,.6.d.d.5 7 i 4 s 3 6.h.n v l l d.k.#.@.I 8 B.B.B.",
+"B.B.B.B.d ) 7 5.J J p.e 7 K s 1 8.e.b b v l a.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.4.g K 1.s.T 5 t 3 5 4 E 6.h @ % ; a.k.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.u./ 5 T s.k.E u u u u u 9 - + x e.k.k.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.f.s.s R l.k.k.k.k.z.k.j.e O k.k.k.k.k.k.#.@.I 8 B.B.B.",
+"B.B.B.B.i.f.R ( / u 8.k.k.k.z.;.7 K O >.k.k.k.k.k.#.#.I 8 B.B.B.",
+"B.B.B.B.i.s./ s 5 O O s J s u T h.j.1 ;.k.k.k.k.k.#.#.I 8 B.B.B.",
+"B.B.B.B.g.k.z.z.z.p.J f.z.z.z.h.-.e T z.z.z.z.z.k.r.@.I 8 B.B.B.",
+"B.B.B.B.r.y.y.y.y.y.t.W L H u 1 i ( 9.y.y.y.y.y.y.@.@.I 8 B.B.B.",
+"B.B.B.B.X.O.O.O.O.O.o. .^ w F ] O.O.O.O.O.O.O.O.X...@.I 8 B.B.B.",
+"B.B.B.B.' ` ` ` ` ` ` ` _ ` ` ` ` ` ` ` ` ` ` ` ` } @.I 8 B.B.B.",
+"B.B.B.B.B.A S S S S S S S S S S S S S S S S S S S S { I 8 B.B.B.",
+"B.B.B.B.B.B.B V V V V V V V V V V V V V V V V V V V Z 6 8 B.B.B.",
+"B.B.B.B.B.B.B.                                        . o B.B.B.",
+"B.B.B.B.B.B.B.B.                                          B.B.B."
+};
